Passing the commit sha as tag to build

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
-Eoooo kanijoooo me cago en to killo y en lo mas sagrao
+Eoooo ese recre gueno
