Created top bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="wrapper">
+      <%= render "/layouts/top_bar" %>
+      <%= yield %>
+    </div>
   </body>
 </html>
