--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,3 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-Eoooo ese recre gueno que no ni na and once again wooooo
+
+<h1>hola manitooooo</h1>
 
