Validation and enabling bybug for docker compose

--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -1,7 +1,12 @@
 <div class="top_bar">
   <img src="https://people.eecs.berkeley.edu/~job/Classes/CS184/Spring-2015-Slides/06-RayTracing.key/Data/a-small-215.png" />
   <div class="login_buttons">
-    <%= button_to "Login", '/login', method: :get%>
-    <%= button_to "Sign Up", '/users/new', method: :get%>
+    <% if logged_in? %>
+        <p>Logged In as <%= current_user.name %></p>
+        <%= button_to "Logout", '/logout', method: :get%>
+    <%else%>
+      <%= button_to "Login", '/login', method: :get%>
+      <%= button_to "Sign Up", '/users/new', method: :get%>
+    <%end%>
   </div>
 </div>
