Trying to create first cheatsheet

--- a/app/views/logged/cheatsheets/index.html.erb
+++ b/app/views/logged/cheatsheets/index.html.erb
@@ -1,1 +1,5 @@
-hello this is the index for cheatsheets
+list of cheatsheets
+
+
+<%= button_to "Create Cheatsheet", '/cheatsheets/new', method: :get%>
+
