Basic rich text working for cheatsheet

--- a/app/views/logged/cheatsheets/show.html.erb
+++ b/app/views/logged/cheatsheets/show.html.erb
@@ -1,3 +1,4 @@
 
-this cheatsheet is called: <%= @cheatsheet.name %>
+<p> title: <%= @cheatsheet.name %> </p>
+<p> <%= @cheatsheet.description %> </p>
 
