--- a/app/views/logged/cheatsheets/new.html.erb
+++ b/app/views/logged/cheatsheets/new.html.erb
@@ -3,6 +3,8 @@ create a new cheatsheet
 
 <%= form_with model: @cheatsheet do |form| %>
   <%= form.text_field :name %>
+  <%= form.label :description %>
+  <%= form.rich_text_area :description %>
   <%= form.submit %>
 <% end %>
 
