--- a/app/views/logged/cheatsheets/show.html.erb
+++ b/app/views/logged/cheatsheets/show.html.erb
@@ -2,3 +2,7 @@
 <p> title: <%= @cheatsheet.name %> </p>
 <p> <%= @cheatsheet.description %> </p>
 
+<% @scenarios.each do |scenario| %>
+ <div>placeholder</div>
+<% end %>
+
