Able to delete scenarios

--- a/app/views/logged/cheatsheets/show.html.erb
+++ b/app/views/logged/cheatsheets/show.html.erb
@@ -5,6 +5,12 @@
 <% @cheatsheet.scenarios.each do |scenario| %>
  <%= scenario.content %>
  <%= scenario.example.html_safe %>
+ <%= form_with model: @cheatsheet, local: true do |form| %>
+    <%= form.fields_for :scenarios, scenario do |scenario_form| %>
+      <%= scenario_form.hidden_field :_destroy, value: true %>
+      <%= scenario_form.submit 'delete' %>
+    <% end %>
+  <% end %>
 <% end %>
 
 <%= form_with model: @cheatsheet, local: true do |form| %>
