--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -1,5 +1,5 @@
 <div class="top_bar">
-  <img src="https://people.eecs.berkeley.edu/~job/Classes/CS184/Spring-2015-Slides/06-RayTracing.key/Data/a-small-215.png" />
+  <%= link_to image_tag('logo.jpg'), "/" %>
   <div class="login_buttons">
     <% if logged_in? %>
       <%= button_to "Cheatsheets", '/cheatsheets', method: :get%>
