Basic colours for the app

--- a/app/assets/stylesheets/top_bar.scss
+++ b/app/assets/stylesheets/top_bar.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   padding: 10px;
-  background-color: #ffbfc3;
+  background-color: #fa8072;
 
   .login_buttons {
     display: flex;
