--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,7 @@
 
  html, body {
   height: 100%;
+  margin: 0;
 }
 
  .wrapper {
@@ -24,5 +25,5 @@
    justify-content: flex-start;
    width: 100%;
    min-height: 100%;
-   background-color: red;
+   background-color: #e0e0e0;
  }
