--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
   <body>
     <div class="wrapper">
       <%= render "/layouts/top_bar" %>
-      <%= yield %>
+      <div class="body-wrapper">
+        <%= yield %>
+      </div>
     </div>
   </body>
 </html>
