--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
 
-<h1>This is the home page</h1>
+<h1>Memory is overrated</h1>
+<h4>Log in if you have an account already or Sign up if you are new around here</h4>
 
