--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,13 +17,60 @@
  html, body {
   height: 100%;
   margin: 0;
+  font-family: 'Rubik', sans-serif;
+  color: #2b394a;
 }
 
- .wrapper {
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+ .page {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    width: 100%;
    min-height: 100%;
-   background-color: #e0e0e0;
+   background-color: #f5f5f5;
  }
+
+ .page > .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: center;
+  width: 100%;
+  max-width: 1400px;
+ }
+
+ input[type="submit"] {
+  background-color: transparent;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 500px;
+  margin: 0 20px 0 20px;
+  padding: 0 20px 0 20px;
+}
+
+input[type="text"], input[type="password"] {
+  border: 0;
+  border-radius: 5px;
+  padding: 20px;
+  margin-top: 20px;
+} 
+
+h1 {
+  padding-top: 20px;
+}
+
