--- a/app/assets/stylesheets/top_bar.scss
+++ b/app/assets/stylesheets/top_bar.scss
@@ -1,27 +1,16 @@
 
-.top_bar {
+.top-bar {
   display: flex;
   justify-content: space-between;
   padding: 10px;
   background-color: #fa8072;
 
-  .login_buttons {
+  .buttons {
     display: flex;
   }
 
   img {
     height: 50px;
     width: 50px;
-  }
-
-  input {
-    background-color: transparent;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 16px;
-    cursor: pointer;
   }
 }
