--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,6 @@
 <h1>Sign up</h1>
-
 <%= form_for @user do |f| %>
-
-  <%= f.label :name%><br>
-  <%= f.text_field :name%><br>
-  <%= f.label :password%><br>
-  <%= f.password_field :password%><br>
+  <%= f.text_field :name, placeholder: "Name" %>
+  <%= f.password_field :password, placeholder: "Password" %>
   <%= f.submit %>
-
 <% end %>
