--- a/app/views/logged/cheatsheets/index.html.erb
+++ b/app/views/logged/cheatsheets/index.html.erb
@@ -4,6 +4,6 @@
 <% end %>
 
 
-<%= button_to "Create Cheatsheet", '/cheatsheets/new', method: :get%>
+<%= button_to "Create New", '/cheatsheets/new', method: :get%>
 
 
