--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -43,17 +43,6 @@
   max-width: 1400px;
  }
 
- input[type="submit"] {
-  background-color: transparent;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 16px;
-  cursor: pointer;
-}
-
 form {
   display: flex;
   flex-direction: column;
@@ -70,7 +59,25 @@ input[type="text"], input[type="password"] {
   margin-top: 20px;
 } 
 
+input[type="submit"] {
+  background-color: #2b394a;
+  border: 0;
+  color: white;
+  padding: 20px 20px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  margin-top: 20px;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
 h1 {
   padding-top: 20px;
+}
+
+p, .user-name{
+  position: fixed;
+  right: 40px;
 }
 
