--- a/app/assets/stylesheets/top_bar.scss
+++ b/app/assets/stylesheets/top_bar.scss
@@ -13,4 +13,21 @@
     height: 50px;
     width: 50px;
   }
+
+  input[type="submit"] {
+    background-color: transparent;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 0;
+  }
+
+  form {
+    margin: 0;
+    padding: 0;
+  }
 }
