--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
   <body class="page">
     <%= render "/layouts/top_bar" %>
     <div class="content">
+      <% if logged_in? %>
+        <p class="user-name">Hi, <%= current_user.name %></p>
+      <% end %>
       <%= yield %>
     </div>
   </body>
