--- a/app/assets/stylesheets/logged/cheatsheets.scss
+++ b/app/assets/stylesheets/logged/cheatsheets.scss
@@ -1,3 +1,23 @@
-// Place all the styles related to the logged/cheatsheets controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+.cheatsheet-index {
+  ul {
+    padding: 0;
+
+    li {
+      list-style-type: none;
+      margin-bottom: 30px;
+
+      a {
+        padding: 20px 20px;
+        text-align: center;
+        text-decoration: none;
+        border: 1px solid;
+        color: black;
+        background-color: white;
+        border-radius: 5px;
+        padding: 10px 20px;
+      }
+    }
+  }
+}
