Able to destroy cheatsheets

--- a/app/assets/stylesheets/logged/cheatsheets.scss
+++ b/app/assets/stylesheets/logged/cheatsheets.scss
@@ -17,6 +17,10 @@
         background-color: white;
         border-radius: 5px;
         padding: 10px 20px;
+
+        img {
+          max-width: 25px;
+        }
       }
     }
   }
