--- a/app/assets/stylesheets/logged/cheatsheets.scss
+++ b/app/assets/stylesheets/logged/cheatsheets.scss
@@ -1,6 +1,11 @@
 
 
 .cheatsheet-index {
+  width: 100%;
+  max-width: 500px;
+  margin: 0 20px 0 20px;
+  padding: 0 20px 0 20px;
+  
   ul {
     padding: 0;
 
@@ -8,7 +13,11 @@
       list-style-type: none;
       margin-bottom: 30px;
 
-      a {
+      .list {
+        display: flex;
+      }
+
+      a.cheatsheet {
         padding: 20px 20px;
         text-align: center;
         text-decoration: none;
