--- a/app/views/logged/cheatsheets/index.html.erb
+++ b/app/views/logged/cheatsheets/index.html.erb
@@ -10,7 +10,7 @@
           <div class="list">
             <%= link_to cheatsheet.name, cheatsheet_path(cheatsheet), class: 'cheatsheet' %>
             <%# <%= link_to image_tag('delete-icon.png'), cheatsheet_path(cheatsheet), method: :delete %>
-            <%= render 'logged/shared/edit/buttons' %>
+            <%= render 'logged/shared/edit/buttons', locals: { object: cheatsheet } %>
           </div>
         </li>
       <% end %>
