--- a/app/views/logged/shared/edit/_buttons.html.erb
+++ b/app/views/logged/shared/edit/_buttons.html.erb
@@ -1,15 +1,14 @@
 
-
 <div data-controller="edit-buttons" class="edit-buttons" >
-  <%= link_to image_tag('edit-icon.png'),
-   "/", data: {
-          'edit-buttons-target': 'button'
-       }, class: 'animation'
+  <%= link_to image_tag('edit-icon.png'), "/",
+    data: {
+     'edit-buttons-target': 'button'
+    }, class: 'animation'
   %>
-  <%= link_to image_tag('delete-icon.png'),
-   "/", data: {
-          confirm: "This will delete this cheatsheet. This action can not be undone", 'edit-buttons-target': 'button'
-       }, class: 'animation'
+  <%= link_to image_tag('delete-icon.png'), 
+    cheatsheet_path(locals[:object]), method: :delete, data: {
+      confirm: "This will delete this cheatsheet. This action can not be undone", 'edit-buttons-target': 'button'
+    }, class: 'animation'
   %>
   <%= content_tag :a, content_tag(:div, ""),
    data: { 
