Half way through with the Groups

--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -3,6 +3,7 @@
   <div class="buttons">
     <% if logged_in? %>
       <%= button_to "Cheatsheets", '/cheatsheets', method: :get %>
+      <%= button_to "Groups", '/groups', method: :get %>
       <%= button_to "Logout", '/logout', method: :delete %>
     <%else%>
       <%= button_to "Login", '/login', method: :get %>
