--- a/app/views/logged/cheatsheets/new.html.erb
+++ b/app/views/logged/cheatsheets/new.html.erb
@@ -1,8 +1,9 @@
-<h1>create a new cheatsheet</h1>
+create a new cheatsheet
+
 
 <%= form_with model: @cheatsheet do |form| %>
-  <%= form.text_field :name, placeholder: 'Name for your cheatsheet' %>
-  <%= form.label :description, 'Add a description if you want' %>
+  <%= form.text_field :name %>
+  <%= form.label :description %>
   <%= form.rich_text_area :description %>
   <%= form.submit %>
 <% end %>
