--- a/app/assets/stylesheets/logged/groups.scss
+++ b/app/assets/stylesheets/logged/groups.scss
@@ -1,3 +1,36 @@
-// Place all the styles related to the logged/groups controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+.group-index {
+  width: 100%;
+  max-width: 500px;
+  margin: 0 20px 0 20px;
+  padding: 0 20px 0 20px;
+  
+  ul {
+    padding: 0;
+
+    li {
+      list-style-type: none;
+      margin-bottom: 10px;
+
+      .list {
+        display: flex;
+      }
+
+      a.group {
+        padding: 20px 20px;
+        text-align: center;
+        text-decoration: none;
+        border: 1px solid;
+        color: black;
+        background-color: white;
+        border-radius: 5px;
+        padding: 10px 20px;
+
+        img {
+          max-width: 25px;
+        }
+      }
+    }
+  }
+}
