--- a/app/assets/stylesheets/logged/shared/edit/buttons.scss
+++ b/app/assets/stylesheets/logged/shared/edit/buttons.scss
@@ -1,22 +1,25 @@
 
 .edit-buttons {
   display: flex;
+  align-items: center;
 
   a {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 40px;
-    width: 40px;
+    height: 34px;
+    width: 34px;
     border-radius: 20px;
     margin-left: 5px;
     position: absolute;
     cursor: pointer;
     background-color: #f5f5f5;
+    background-size: cover;
 
     img {
-      height: 30px;
-      width: 30px;
+      height: 25px;
+      width: 25px;
+      background-size: cover;
     }
   }
 
