--- a/app/views/logged/cheatsheets/index.html.erb
+++ b/app/views/logged/cheatsheets/index.html.erb
@@ -11,8 +11,10 @@
         <li>
           <div class="list">
             <%= link_to cheatsheet.name, cheatsheet_path(cheatsheet), class: 'cheatsheet' %>
-            <%# <%= link_to image_tag('delete-icon.png'), cheatsheet_path(cheatsheet), method: :delete %>
-            <%= render 'logged/shared/edit/buttons', locals: { object: cheatsheet } %>
+            <%= render 'logged/shared/edit/buttons', locals: {
+              object: cheatsheet,
+              edit_path: edit_cheatsheet_path(cheatsheet),
+              delete_path: cheatsheet_path(cheatsheet) } %>
           </div>
         </li>
       <% end %>
