--- a/app/assets/stylesheets/scenarios.scss
+++ b/app/assets/stylesheets/scenarios.scss
@@ -1,3 +1,32 @@
-// Place all the styles related to the Scenarios controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+
+.scenario {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  max-width: 500px;
+  margin: 0 20px 0 0;
+
+  .data {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    border: 0;
+    border-radius: 5px;
+    padding: 20px;
+    margin-top: 20px;
+    background-color: white;
+  }
+
+  input[type="image"] {
+    margin: 30px 0 0 10px;
+    height: 30px;
+  }
+
+  .trix-content {
+    border: 0;
+    border-radius: 0 0 5px 5px;
+    padding: 20px;
+    background-color: rgb(241, 241, 241);
+    margin-top: 15px;
+  }
+}
