--- a/app/views/scenarios/_scenario.html.erb
+++ b/app/views/scenarios/_scenario.html.erb
@@ -8,5 +8,8 @@
       <%= local_assigns[:scenario].example %>
     <% end %>
   </div>
-  <%= yield %>
+  <div class='edit'>
+    <%= yield %>
+    <%= image_tag('drag-icon.png') %>
+  </div>
 </div>
