--- a/app/assets/stylesheets/logged/cheatsheets.scss
+++ b/app/assets/stylesheets/logged/cheatsheets.scss
@@ -34,3 +34,27 @@
     }
   }
 }
+
+.add-scenario {
+  margin-top: 20px;
+  background-color: #d4d4d4;
+  border-radius: 5px;
+  margin-bottom: 50px;
+
+
+  .form {
+    display: none;
+    flex-direction: row;
+    width: 100%;
+    max-width: 500px;
+    padding-bottom: 20px;
+  }
+
+  img {
+    height: 50px;
+    position: fixed;
+    bottom: 5px;
+    right: 0;
+    cursor: pointer;
+  }
+}
