Showing cheatsheet nav in cheatsheet groups

--- a/app/views/logged/cheatsheets/show.html.erb
+++ b/app/views/logged/cheatsheets/show.html.erb
@@ -1,4 +1,16 @@
 
+<% if @group %>
+  <nav>
+    <ul>
+      <% @group.cheatsheets.each do |cheatsheet| %>
+        <li>
+          <%= link_to cheatsheet.name, [@group, cheatsheet]%>
+        </li>
+      <% end %>
+    </ul>
+  </nav>
+<% end %>
+
 <h1><%= @cheatsheet.name %></h1>
 
 <% if @cheatsheet.scenarios.empty? %>
