--- a/app/assets/stylesheets/logged/cheatsheets.scss
+++ b/app/assets/stylesheets/logged/cheatsheets.scss
@@ -58,3 +58,31 @@
     cursor: pointer;
   }
 }
+
+nav {
+  display: flex;
+  flex-wrap: wrap;
+
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+
+    li {
+      list-style-type: none;
+      height: 50px;
+
+      a {
+        padding: 20px 20px;
+        text-align: center;
+        text-decoration: none;
+        background-color: white;
+        color: grey;
+        border-radius: 3px;
+        padding: 10px 20px;
+        cursor: pointer;
+        margin: 5px;
+      }    
+    }
+  }
+}
