Added some more flash

--- a/app/views/logged/cheatsheets/new.html.erb
+++ b/app/views/logged/cheatsheets/new.html.erb
@@ -1,5 +1,4 @@
-create a new cheatsheet
-
+<h1>create a new cheatsheet</h1>
 
 <%= form_with model: @cheatsheet do |form| %>
   <%= form.text_field :name %>
