--- a/app/views/logged/shared/edit/_buttons.html.erb
+++ b/app/views/logged/shared/edit/_buttons.html.erb
@@ -14,6 +14,6 @@
   <%= content_tag :a, content_tag(:div, ""),
    data: { 
      action: 'click->edit-buttons#toggle', 'edit-buttons-target': 'button'
-    }, class: 'animation last-button right-arrow'
+    }, class: 'animation last-button right-arrow', id: 'toggle'
   %>
 </div>
