--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -4,6 +4,7 @@
     <% if logged_in? %>
       <%= button_to "Cheatsheets", '/cheatsheets', method: :get %>
       <%= button_to "Groups", '/groups', method: :get %>
+      <%= button_to "Account", edit_user_path(current_user), method: :get %>
       <%= button_to "Logout", '/logout', method: :delete %>
     <%else%>
       <%= button_to "Login", '/login', method: :get %>
