--- a/app/views/logged/cheatsheets/show.html.erb
+++ b/app/views/logged/cheatsheets/show.html.erb
@@ -19,13 +19,24 @@
 
 <div class="scenarios-wrapper" data-controller="drag-item" data-action="dragstart->drag-item#dragstart dragover->drag-item#dragover dragenter->drag-item#dragenter drop->drag-item#drop dragend->drag-item#dragend">
   <% @cheatsheet.scenarios.each do |scenario| %>
-    <div class="droppable" draggable="true" data-sort-id="1">
+    <div class="droppable" data-controller="edit-scenario" draggable="true" data-sort-id="1">
       <%= form_with model: @cheatsheet, local: true do |form| %>
-        <%= render 'scenarios/scenario', scenario: scenario do %>
-          <%= image_submit_tag("delete-icon.png") %>
-        <% end %>
+        <div data-edit-scenario-target="showingScenarioWrapper">
+          <%= render 'scenarios/scenario', scenario: scenario do %>
+            <%= image_submit_tag("delete-icon.png") %>
+            <%= image_tag'edit-icon.png', data: { action: "click->edit-scenario#toggle" } %>
+          <% end %>
+        </div>
         <%= form.fields_for :scenarios, scenario do |scenario_form| %>
-          <%= scenario_form.hidden_field :_destroy, value: true %>
+          <div data-edit-scenario-target="editingScenarioWrapper" class="editing-scenario-wrapper">
+            <%= scenario_form.text_field :content %>
+            <%= scenario_form.rich_text_area :example %>
+            <%= scenario_form.submit 'update' %>
+            <button data-action="click->edit-scenario#cancelEditing" }>Cancel</button>
+          </div>
+          <div data-edit-scenario-target="hiddenDeleteScenario">
+            <%= scenario_form.hidden_field :_destroy, value: true %>
+          </div>
         <% end %>
       <% end %>
     </div>
