--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -52,7 +52,7 @@ form {
   padding: 0 20px 0 20px;
 }
 
-input[type="text"], input[type="password"] {
+input[type="text"], input[type="password"], input[type="email"] {
   border: 0;
   border-radius: 5px;
   padding: 20px;
