--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,5 +2,6 @@
 <%= form_for @user do |f| %>
   <%= f.text_field :name, placeholder: "Name" %>
   <%= f.password_field :password, placeholder: "Password" %>
+  <%= f.email_field :email, placeholder: "Email" %>
   <%= f.submit %>
 <% end %>
