--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -1,5 +1,5 @@
 <div class="top-bar">
-  <%= link_to image_tag('logo.jpg'), "/" %>
+  <%= link_to image_tag('logo.png'), "/" %>
   <div class="buttons">
     <% if logged_in? %>
       <%= button_to "Cheatsheets", '/cheatsheets', method: :get %>
